--- a/编程学习笔记/编程学习笔记.md
+++ b/编程学习笔记/编程学习笔记.md
@@ -1,31 +1,3 @@
-1.	Linux命令
-ls
--l
--a	列出目录
--长格式列出
--显示所有文件，包括隐藏文件和目录（所有以“.”为开始的文件和目录为隐藏文件）
-more	
-less	
-cat	
-pwd	查看所在路径位置
-cd 
-/
-./
-../	进入某个目录
-根目录
-当前目录
-上级目录
-mkdir	创建目录
-sudo	加在命令前面，获取管理员权限
-rm
--r
-
--f	删除文件
--就是向下递归，不管有多少级目录，一并删除
--就是直接强行删除，不作任何提示的意思
-Ctrl+A	光标回到行首
-Ctrl+E	光标回到行尾
-
 2.	Git命令行
 参考文献：
 https://blog.csdn.net/chenxueshanBlog/article/details/78915338 
@@ -59,6 +31,37 @@ https://www.cnblogs.com/zhangxiaoliu/p/6008038.html
 git rm -r –-cached .
 git add .
 git commit -m ‘update .gitignore’
+
+# Linux命令
+
+ls
+-l
+-a	列出目录
+-长格式列出
+-显示所有文件，包括隐藏文件和目录（所有以“.”为开始的文件和目录为隐藏文件）
+more	
+less	
+cat	
+pwd	查看所在路径位置
+cd 
+/
+./
+../	进入某个目录
+根目录
+当前目录
+上级目录
+mkdir	创建目录
+sudo	加在命令前面，获取管理员权限
+rm
+-r
+
+-f	删除文件
+-就是向下递归，不管有多少级目录，一并删除
+-就是直接强行删除，不作任何提示的意思
+Ctrl+A	光标回到行首
+Ctrl+E	光标回到行尾
+
+
 
 
 3.	转换说明符
